syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

message Money {
  // The 3-letter currency code defined in ISO 4217.
  string currency_code = 1;

  // The whole units of the amount.
  // For example if `currencyCode` is `"USD"`, then 1 unit is one US dollar.
  int64 units = 2;

  // Number of nano (10^-9) units of the amount.
  // The value must be between -999,999,999 and +999,999,999 inclusive.
  // If `units` is positive, `nanos` must be positive or zero.
  // If `units` is zero, `nanos` can be positive, zero, or negative.
  // If `units` is negative, `nanos` must be negative or zero.
  // For example $-1.75 is represented as `units`=-1 and `nanos`=-750,000,000.
  int32 nanos = 3;
}

message Empty {}

// ---------------推荐服务 Recommendation service----------

// 推荐服务接口
service RecommendationService {
  rpc ListRecommendations(ListRecommendationsRequest)
      returns (ListRecommendationsResponse) {}
}

// 推荐列表请求
message ListRecommendationsRequest {
  string user_id = 1;
  repeated string product_ids = 2;
}

// 推荐列表响应
message ListRecommendationsResponse { repeated string product_ids = 1; }

// ---------------商品分类（推荐里面用到了） Product Catalog----------------

//分页
message PageRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message PageResponse {
  int32 page = 1;
  int32 page_size = 2;
  int64 total = 3;
  repeated Product products = 4;
}
service ProductCatalogService{
  rpc ListProducts(PageRequest)returns(ListProductsResponse){};
  rpc GetProduct(GetProductRequest)returns(Product){};
  rpc SearchProducts(SearchProductsRequest)returns(SearchProductsResponse){};
}
message Product{
  string id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  Money price_usd = 5;
  repeated string categories = 6;
}
message ListProductsResponse{
  PageResponse page = 1;
}
//根据id查询
message GetProductRequest{
  string id = 1;
}
message SearchProductsRequest{
  string query = 1;
  PageRequest page = 2;
}
// 搜索商品响应
message SearchProductsResponse {
  PageResponse page = 1;
}